# ecs-tasks-ops

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  MainWindow.py  README.rst  noxfile.py  package-lock.json  poetry.lock-back  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/ecs_tasks_ops/: __main__.py  curses_gui.py  ecs_cache.py  ecs_conf.py  ecs_data.py  ecs_facade.py  ecs_ssh.py  pretty_json.py  pretty_table.py  qt5_gui.py  urwid_ecs.py  urwid_gui.py  urwid_widgets.py  urwind_gui.py
src/ecs_tasks_ops_qt5/: AboutDialog.py  MainWindow.py  __init__.py  __main__.py  about.py  about.ui  main_window.py  mainwindow.ui  mainwindow.ui.autosave  qt5_ecs.py  qt5_gui.py  xterm.js
src/ecs_tasks_ops_urwid/: __init__.py  __main__.py  urwid_ecs.py  urwid_gui.py
tests/: __init__.py  infrastructure.py  test_conf.py  test_ecs_data.py  test_main.py  test_pretty_format.py  test_pretty_table.py  test_ssh.py
