[tool.poetry]
name = "ecs-tasks-ops"
version = "0.1.0"
description = "Ecs Tasks Ops"
authors = ["Pablo Palazon <ppalazon@antara.ws>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ppalazon/ecs-tasks-ops"
repository = "https://github.com/ppalazon/ecs-tasks-ops"
documentation = "https://ecs-tasks-ops.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/ppalazon/ecs-tasks-ops/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
boto3 = "^1.15.13"
boto3-stubs = {extras = ["ec2", "ecs"], version = "^1.15.14"}
tabulate = "^0.8.7"
urwid = "^2.1.2"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"
nox-poetry = "^0.5.0"
rope = "^0.18.0"
pylint = "^2.6.0"

[tool.poetry.scripts]
ecs-tasks-ops = "ecs_tasks_ops.__main__:main"
ecs-tasks-ops-qt5 = "ecs_tasks_ops_qt5.__main__:main"
ecs-tasks-ops-urwid = "ecs_tasks_ops_urwid.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ecs_tasks_ops"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
